force-app/main/default/objects/BVS_Project_Closeout_Process__c/BVS_Project_Closeout_Process__c.object-meta.xml
<CustomObject>
    <description>This custom object is designed for the Business Value Strategist team to capture key data metrics for a PSA Certinia Project when is it completed.</description>
    <label>BVS Project Closeout</label>
    <nameField>
        <displayFormat>BVS-{000000}</displayFormat>
        <label>BVS Project Closeout Process</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BVS Project Closeouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>