force-app/main/default/objects/BVS_Project_Closeout_Process__c/fields/Business_case_has_industry_value_goals__c.field-meta.xml
<CustomField>
    <fullName>Business_case_has_industry_value_goals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business case has industry value goals</label>
    <type>Checkbox</type>
</CustomField>