force-app/main/default/objects/BVS_Project_Closeout_Process__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Project__r.Name 
&amp; &quot; - &quot; &amp; (Project__r.pse__Project_ID__c) 
&amp; &quot; - &quot; &amp; 
Project__r.pse__Group__r.Name</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>