force-app/main/default/objects/BVS_Project_Closeout_Process__c/fields/SOW_Sent__c.field-meta.xml
<CustomField>
    <fullName>SOW_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you sent the SOW</inlineHelpText>
    <label>SOW Sent?</label>
    <type>Checkbox</type>
</CustomField>